Issue-2810: Replace margin-top on Columns for gap (#2882)
* fixes

* fixe  2810

* fix gap

* update test

* add gapControl component

* Fixes #2810

* Replaces original margin-top for row-gap on Grid
* Replaces width gap for column-gap on Grid
* Add gap options on Row Maxi
* Clean and refactor part of Column Template API
* Fix maxiBlockComponent lifecylce errors
* Fix and update tests

* Fix minor bugs

* Fix test

* Change default column-gap on Row Maxi

* Fix tests

* Fix test

--- a/src/blocks/row-maxi/style.scss
+++ b/src/blocks/row-maxi/style.scss
@@ -1,7 +1,6 @@
 body.maxi-blocks--active .maxi-row-block {
 	position: relative;
 	display: flex;
-	flex-wrap: wrap;
 	justify-content: space-between;
 
 	&:focus {
